--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>大仁书店</title>
+    <link rel="stylesheet" href="Java基础/gitbook/style.css">
 </head>
 <body>
 <a href="./Java基础/index.html">Java基础</a>
