--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="Java基础/gitbook/style.css">
 </head>
 <body>
-<a href="./Java基础/index.html">Java基础</a>
+<a href="./Java基础/index.html">Java基础</a><br>
+<a href="./audio.html">录音</a>
 </body>
 </html>
